feat: add 400 response for DELETE /subscriptions/{id} endpoint
