# docs/swagger.yaml
@@ -154,6 +154,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
         "404":
           description: Not Found
           schema:
