# internal/handler/delete_subscription.go
@@ -12,18 +12,28 @@ import (
 // @Tags subscriptions
 // @Param id path string true "Subscription ID"
 // @Success 204 "No Content"
+// @Failure 400 {object} domain.ErrorResponse
 // @Failure 404 {object} domain.ErrorResponse
 // @Failure 500 {object} domain.ErrorResponse
 // @Router /subscriptions/{id} [delete]
 func (h *Handler) DeleteSubscription(w http.ResponseWriter, r *http.Request) {
 	id64, err := strconv.ParseUint(r.PathValue("id"), 10, 64)
+	if err != nil {
+		WriteErrorJSON(w, domain.ErrInvalidID, 400)
+		return
+	}
 	ctx := r.Context()
 
 	err = h.subscriptions.DeleteSubscription(ctx, uint(id64))
-	if err == domain.ErrSubscriptionNotFound {
-		WriteErrorJSON(w, err, 404)
-		return
-	} else if err != nil {
+	if err != nil {
+		if err == domain.ErrSubscriptionNotFound {
+			WriteErrorJSON(w, err, 404)
+			return
+		}
+		if err == domain.ErrInvalidID {
+			WriteErrorJSON(w, err, 400)
+			return
+		}
 		WriteErrorJSON(w, err, 500)
 		return
 	}
